Small fixes to code

--- a/ESP-OpenBCI/config/esp.openbci.properties
+++ b/ESP-OpenBCI/config/esp.openbci.properties
@@ -25,7 +25,7 @@ rxtx.lib.installed=false
 #
 # The class com.github.mrstampy.esp.openbci.rxtx.RxtxNativeLibLoader should be able to 
 # determine the correct native lib for the os and architecture on which ESP-OpenBCI is running.
-# If not, set this property to one of windows, apple, linux or solaris.
+# If not, set this property to one of windows, mac os x, linux or solaris.
 os.override.name=
 
 # The class com.github.mrstampy.esp.openbci.rxtx.RxtxNativeLibLoader should be able to 
