--- a/ESP-OpenBCI/config/esp.openbci.properties
+++ b/ESP-OpenBCI/config/esp.openbci.properties
@@ -30,9 +30,10 @@ os.override.name=
 
 # The class com.github.mrstampy.esp.openbci.rxtx.RxtxNativeLibLoader should be able to 
 # determine the correct native lib for the os and architecture on which ESP-OpenBCI is running.
-# If not and the os.override.name property is set to either linux or solaris this property can be set to one of:
+# If not and the os.override.name property is set to either windows, linux or solaris this property can be set to one of:
 #		For Linux: 		one of x86_64, ia64, i686
 #		For Solaris: 	one of sparc32, sparc64
+#		For Windows:	one of x86, 64 or blank
 os.override.arch=
 
 #
