Implemented from OpenBCI repo.

--- a/ESP-OpenBCI/config/esp.openbci.properties
+++ b/ESP-OpenBCI/config/esp.openbci.properties
@@ -1,9 +1,9 @@
 # For Windows computer, the serial ports are called "COM1", "COM2", etc... 
 # For Linux and some other Unix : "/dev/ttyS0", "/dev/ttyS1", "/dev/ttyUSB0".
-port.identifier=
+port.identifier=COM12
 
 # The baud rate
-baud.rate=
+baud.rate=115200
 
 # The data bits, one of DATABITS_5, DATABITS_6, DATABITS_7, DATABITS_8
 data.bits=
