removal of scribbles

--- a/ESP-OpenBCI/config/esp.openbci.properties
+++ b/ESP-OpenBCI/config/esp.openbci.properties
@@ -56,19 +56,7 @@ highest.signal.val=99999
 # The lowest raw value that can be expected
 lowest.signal.val=-99999
 
-#######################################################################
-# Channel information
-# Channel properties are to be added in the form 'esp.openbci.channel#'
-# where '#' is a sequential integer.
-#######################################################################
-
 #
-# Convenience property to indicate how many channels (esp.openbci.channel# properties)
-# are defined in this configuration.
+# Number of OpenBCI channels
 #
 esp.openbci.num.channels=1
-
-esp.openbci.channel1.name=My Initial Gross Oversimpification Channel (or other such unique human grokable id)
-esp.openbci.channel1.identifier=the value of the part of the byte array which says 'hey there, I'm channel 1!'
-# the expected length of channel1 messages excluding header info (data only), -1 if unknown
-esp.openbci.channel1.length=-1
