Multi-channel changes

--- a/ESP-OpenBCI/config/esp.openbci.properties
+++ b/ESP-OpenBCI/config/esp.openbci.properties
@@ -60,3 +60,10 @@ lowest.signal.val=-99999
 # Number of OpenBCI channels
 #
 esp.openbci.num.channels=1
+
+#
+# Optional descriptions; use properties in the form
+# 'esp.openbci.channel#.desc' where '#' is a sequential
+# integer starting at 1.
+#
+esp.openbci.channel1.desc=Optional description for channel 1
