--- a/ESP-OpenBCI/ivy.xml
+++ b/ESP-OpenBCI/ivy.xml
@@ -3,7 +3,7 @@
        xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd"
 	   xmlns:m="http://ant.apache.org/ivy/maven">
        
-	<info organisation="com.github.mrstampy" module="esp-openbci" status="integration" revision="2.1-SNAPSHOT" />
+	<info organisation="com.github.mrstampy" module="esp-openbci" status="integration" revision="2.1-RC1" />
 	    
     <publications>
         <artifact name="esp-openbci"/>
@@ -13,7 +13,7 @@
     </publications>
 	
 	<dependencies>
-		<dependency org="com.github.mrstampy" name="esp" rev="2.1-SNAPSHOT"/>
+		<dependency org="com.github.mrstampy" name="esp" rev="2.1"/>
 		<dependency org="org.apache.mina" name="mina-transport-serial" rev="2.0.7"/>
 	</dependencies>
 	
